# Desafio-Criando-Uma-API-Com-FastAPI-Utilizando-TDD

./: .env  README.md  docker-compose.yml  pyproject.toml  run.py
store/: main.py  routers.py
store/controllers/: product.py
store/core/: config.py  exception.py
store/db/: mongo.py
store/models/: base.py  product.py
store/schemas/: base.py  product.py
store/usecases/: product.py
tests/: conftest.py  fectories.py
tests/controllers/: test_product.py
tests/schemas/: fectories.py  test_product.py
tests/usecases/: test_product.py
